partial fixes for graph connections and printing: Updated GameView to print actor/director names correctly; suggest handling to show usage error when no prefix provided